--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 	<div id="fh5co-hero-wrapper">
 		<nav class="container navbar navbar-expand-lg main-navbar-nav navbar-light">
-			<a class="navbar-brand" href="">Infoguía</a>
+			<!-- <a class="navbar-brand"></a>  -->
+			<img src="img/Logo3b.png" alt="logoInfoguia" class="img-logo">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -57,10 +58,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-items-center ml-auto mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" onclick="$('#fh5co-features').goTo();return false;">Funciones</a>
+						<a class="nav-link" href="#" onclick="$('#fh5co-features').goTo();return false;">Servicios</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" onclick="$('#fh5co-reviews').goTo();return false;">Opiniones</a>
@@ -70,18 +71,20 @@
 					</li>
 				</ul>
 				<div class="social-icons-header">
-					<a href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
-					<a href="https://freehtml5.co"><i class="fab fa-instagram"></i></a>
-					<a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
+					<a href="https://www.facebook.com/infoguiaok" target="_blank"><i class="fab fa-facebook-f"></i></a>
+					<a href="https://www.instagram.com/infoguiaok/" target="_blank"><i class="fab fa-instagram"></i></a>
+					<!-- <a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a> -->
 				</div>
 			</div>
 		</nav>
 
 		<div class="container fh5co-hero-inner">
-			<h1 class="animated fadeIn wow" data-wow-delay="0.4s">La App que vino a hacerte la vida más fácil!</h1>
-			<p class="animated fadeIn wow" data-wow-delay="0.67s">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et voluptates, aliquid soluta distinctio dolorum tenetur. </p>
-			<button class="btn btn-md download-btn-first wow fadeInLeft animated" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;">Download</button>
-			<button class="btn btn-md features-btn-first animated fadeInLeft wow" data-wow-delay="0.95s" onclick="$('#fh5co-features').goTo();return false;">Features</button>
+			<h1 class="animated fadeIn wow" data-wow-delay="0.4s">La App que vino a hacerte</h1>
+			<h1 class="animated fadeIn wow" data-wow-delay="0.4s">la vida más fácil!</h1>
+
+			<p class="animated fadeIn wow" data-wow-delay="0.67s">Encontrá todo lo que buscas en la palma de tu mano. </p>
+			<button class="btn btn-md download-btn-first wow fadeInLeft animated" data-wow-delay="0.85s" onclick="$('#fh5co-download').goTo();return false;">Descargar</button>
+			<button class="btn btn-md features-btn-first animated fadeInLeft wow" data-wow-delay="0.95s" onclick="$('#fh5co-features').goTo();return false;">Servicios</button>
 			<img class="fh5co-hero-smartphone animated fadeInRight wow" data-wow-delay="1s" src="img/phone-image.png" alt="Smartphone">
 		</div>
 
@@ -95,27 +98,27 @@
 
 	<div class="fh5co-advantages-outer">
 		<div class="container">
-			<h1 class="second-title"><span class="span-perfect">Perfect</span> <span class="span-features">Features</span></h1>
-			<small>Only necessary</small>
+			<h1 class="second-title"><span class="span-perfect">Marcando</span> <span class="span-features">Diferencia</span></h1>
+			<small>Sólo lo que necesitas</small>
 
 			<div class="row fh5co-advantages-grid-columns wow animated fadeIn" data-wow-delay="0.36s">
 
 				<div class="col-sm-4">
 					<img class="grid-image" src="img/icon-1.png" alt="Icon-1">
-					<h1 class="grid-title">Usability</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<h1 class="grid-title">Agilidad</h1>
+					<p class="grid-desc">Lo que buscas, en segundos.</p>
 				</div>
 
 				<div class="col-sm-4">
 					<img class="grid-image" src="img/icon-2.png" alt="Icon-2">
-					<h1 class="grid-title">Parallax Effect</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<h1 class="grid-title">Funcional</h1>
+					<p class="grid-desc">Varias utilidades en una sóla app.</p>
 				</div>
 
 				<div class="col-sm-4">
 					<img class="grid-image" src="img/icon-3.png" alt="Icon-3">
-					<h1 class="grid-title">Unlimited Colors</h1>
-					<p class="grid-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem cupiditate.</p>
+					<h1 class="grid-title">Intuitiva</h1>
+					<p class="grid-desc">Muy fácil de usar.</p>
 				</div>
 
 
@@ -129,16 +132,17 @@
 		 ========================================================================================================== -->
 
 	<div class="fh5co-slider-outer wow fadeIn" data-wow-delay="0.36s">
-		<h1>SIMPLE WIDGETS</h1>
-		<small>Drag and Drop</small>
+		<h1>Pantallas</h1>
+		<small>deliza</small>
 		<div class="container fh5co-slider-inner">
 
 			<div class="owl-carousel owl-theme">
 
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
-				<div class="item"><img src="img/iphone.png" alt=""></div>
-				<div class="item"><img src="img/smartphone-2.png" alt=""></div>
+				<div class="item"><img src="img/capturas/smartphone1.png" alt=""></div>
+				<div class="item"><img src="img/capturas/smartphone2.png" alt=""></div>
+				<div class="item"><img src="img/capturas/smartphone3.png" alt=""></div>
+				<div class="item"><img src="img/capturas/smartphone4.png" alt=""></div>
+				<div class="item"><img src="img/capturas/smartphone5.png" alt=""></div>
 
 
 			</div>
@@ -159,45 +163,47 @@
 
 				<div class="col-sm-6 in-order-1 wow animated fadeInLeft" data-wow-delay="0.22s">
 					<div class="col-sm-image-container">
-						<img class="img-float-left" src="img/smartphone-1.png" alt="smartphone-1">
-						<span class="span-new">NEW</span>
-						<span class="span-free">Free</span>
+						<img class="img-float-left" src="img/servicios/smartphoneS1.png" alt="smartphone-1">
+						<!-- <span class="span-new">NEW</span> -->
+						<span class="span-free">NEW</span>
 					</div>
 				</div>
 
+
 				<div class="col-sm-6 in-order-2 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
-					<h1>New Features</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
+					<h1>Marketing Digital</h1>
+					<p>No pierdas tiempo en gestionar y crear contendido de calidad. Ofrecemos soluciones a tu medida: Planes mensuales o Pack de contenido.</p>
 					<span class="circle circle-first"><i class="fab fa-instagram"></i></span>
 					<span class="circle circle-middle"><i class="fab fa-facebook"></i></span>
-					<span class="circle circle-last"><i class="fab fa-twitter"></i></span>
+					<!-- <span class="circle circle-last"><i class="fab fa-twitter"></i></span> -->
 				</div>
 
 				<div class="col-sm-6 in-order-3 sm-6-content wow animated fadeInLeft" data-wow-delay="0.22s">
-					<h1>REAL-TIME STATISTICS</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
+					<h1>Desarrollo Web</h1>
+					<p>Se parte de la era digital y mostrate al mundo con las webs a medida que desarrollamos, de acuerdo a tus necesidades. </p>
 					<span class="circle circle-first"><i class="fas fa-star"></i></span>
 					<span class="circle circle-middle"><i class="far fa-star"></i></span>
-					<span class="circle circle-last"><i class="far fa-thumbs-up"></i></span>
+					<!-- <span class="circle circle-last"><i class="far fa-thumbs-up"></i></span>-->
 				</div>
 
 				<div class="col-sm-6 in-order-4 wow animated fadeInRight" data-wow-delay="0.22s">
-					<img class="img-float-right" src="img/smartphone-2.png" alt="smartphone-2">
+					<img class="img-float-right" src="img/servicios/smartphoneS2.png" alt="smartphone-2">
 				</div>
+
 
 				<div class="col-sm-6 in-order-5 wow animated fadeInLeft" data-wow-delay="0.22s">
 					<div class="col-sm-image-container">
-						<img class="img-float-left" src="img/smartphone-2.png" alt="smartphone-3">
-						<span class="span-data">DATA</span>
-						<span class="span-percent">100%</span>
+						<img class="img-float-left" src="img/servicios/smartphoneS3.png" alt="smartphone-3">
+						<!-- <span class="span-data">DATA</span> -->
+						<span class="span-percent">DATA</span>
 					</div>
 				</div>
 				<div class="col-sm-6 in-order-6 sm-6-content wow animated fadeInRight" data-wow-delay="0.22s">
-					<h1>POWERFUL BACKEND</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dolor iste beatae ad adipisci, fugiat dignissimos pariatur, dolore nemo suscipit cum nisi earum voluptates nulla! </p>
+					<h1>Asesoría Digital</h1>
+					<p>¿Cómo estás en el área digital? Diagnosticamos tu Comercio/Empresa y te ofrecemos soluciones para que seas parte de ésta era Digital. </p>
 					<span class="circle circle-first">95%</span>
 					<span class="circle circle-middle"><i class="fas fa-forward"></i></span>
-					<span class="circle circle-last"><i class="fab fa-github"></i></span>
+					<!-- <span class="circle circle-last"><i class="fab fa-github"></i></span> -->
 
 				</div>
 
@@ -216,20 +222,20 @@
 		 ========================================================================================================== -->
 
 	<div id="fh5co-reviews" class="fh5co-reviews-outer">
-		<h1>What people are saying</h1>
-		<small>Reviews</small>
+		<h1>Qué dicen sobre la App</h1>
+		<small>opiniones</small>
 		<div class="container fh5co-reviews-inner">
 			<div class="row justify-content-center">
 				<div class="col-sm-5 wow fadeIn animated" data-wow-delay="0.25s">
 					<img class="float-left" src="img/quotes-1.jpg" alt="Quote 1">
-					<p class="testimonial-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique quasi.</p>
-					<small class="testimonial-author">John Doe</small>
+					<p class="testimonial-desc">Excelente app! Me encanta, más que útil! :)</p>
+					<small class="testimonial-author">Dadá S.</small>
 					<img class="float-right" src="img/quotes-2.jpg" alt="Quote 2">
 				</div>
 				<div class="col-sm-5 testimonial-2 wow fadeIn animated" data-wow-delay="0.67s">
 					<img class="float-left" src="img/quotes-1.jpg" alt="Quote 1">
-					<p class="testimonial-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis similique quasi.</p>
-					<small class="testimonial-author">Someone</small>
+					<p class="testimonial-desc">Encuentro servicios que no sabía que existían.</p>
+					<small class="testimonial-author">Julio Cesar O.</small>
 					<img class="float-right" src="img/quotes-2.jpg" alt="Quote 2">
 				</div>
 			</div>
@@ -248,7 +254,7 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<h1>¿Cómo descargar la App?</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque suscipit, similique animi saepe, ipsam itaque, tempore minus maxime pariatur error unde fugit tenetur.</p>
+						<p>Ingresá al enlace de Google Play, descargar y listo! empezá a disfrutar de todas las utilidadas al alcance de tu mano, de una forma fácil y rápida. Además es muuy liviana!!</p>
 						<!-- <a class="wow fadeIn animated" data-wow-delay="0.25s" href="#"><img class="app-store-btn" src="img/app-store-icon.png" alt="App Store Icon"></a> -->
 						<a class="wow fadeIn animated" data-wow-delay="0.67s" target="_blank" href="https://play.google.com/store/apps/details?id=ar.com.infoguiaweb.infoguia"><img class="google-play-btn" src="img/google-play-icon.png" alt="Google Play Icon"></a>
 					</div>
@@ -272,8 +278,8 @@
 				<div class="column-2-3">
 					<nav class="footer-nav">
 						<ul>
-							<a href="#" onclick="$('#fh5co-hero-wrapper').goTo();return false;"><li>Home</li></a>
-							<a href="#" onclick="$('#fh5co-features').goTo();return false;"><li>Funciones</li></a>
+							<a href="#" onclick="$('#fh5co-hero-wrapper').goTo();return false;"><li>Inicio</li></a>
+							<a href="#" onclick="$('#fh5co-features').goTo();return false;"><li>Servicios</li></a>
 							<a href="#" onclick="$('#fh5co-reviews').goTo();return false;"><li>Opiniones</li></a>
 							<a href="#" onclick="$('#fh5co-download').goTo();return false;"><li class="active">Descargar</li></a>
 						</ul>
@@ -281,16 +287,19 @@
 				</div>
 				<div class="column-3-3">
 					<div class="social-icons-footer">
-						<a href="https://www.facebook.com/fh5co"><i class="fab fa-facebook-f"></i></a>
-						<a href="https://freehtml5.co"><i class="fab fa-instagram"></i></a>
-						<a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a>
+						<a href="https://www.facebook.com/infoguiaok" target="_blank"><i class="fab fa-facebook-f"></i></a>
+						<a href="https://www.instagram.com/infoguiaok/" target="_blank"><i class="fab fa-instagram"></i></a>
+
+						<!-- <a href="https://www.twitter.com/fh5co"><i class="fab fa-twitter"></i></a> -->
 					</div>
 				</div>
 			</div>
 
 			<span class="border-bottom-footer"></span>
 
-			<p class="copyright">&copy; 2018 App. Todos los derechos reservados. Desarrollado por <a href="https://freehtml5.co" target="_blank">AION</a>.</p>
+			<p class="copyright">&copy; 2018 App. Todos los derechos reservados. Desarrollado por <a href="https://api.whatsapp.com/send?phone=5493513951583" target="_blank">AION</a>.</p>
+			
+
 
 		</div>
 	</footer>
